# updateable

./: CMakeLists.txt  README.md
examples/sandbox/: CMakeLists.txt  README.md  main.cpp
examples/sandbox/src/: sandboxapp.cpp  sandboxapp.h  sandboxlayer.cpp  sandboxlayer.h
loader/: CMakeLists.txt
loader/src/loader/: dylib.cpp  dylib.h  entrypoint.h  loader.cpp  loader.h
sandbox/: CMakeLists.txt  main.cpp
sandbox/src/: main.cpp  sandboxapp.cpp
updateable/: CMakeLists.txt
updateable/src/updateable/: updateable.h
updateable/src/updateable/core/: application.cpp  application.h  layer.h
